2004-02-27  Benjamin Otte  <otte@gnome.org>

	* gst/gstbuffer.h:
	  remove gst_buffer_free, use gst_data_unref
	* gst/gstdata.c: (gst_data_get_type):
	  use refcounting in GstData GBoxed registration
	* gst/gstdata.h:
	  remove gst_data_free, use gst_data_unref

2004-02-27  Johan Dahlin  <johan@gnome.org>

	* gst/gstdata.c (gst_data_get_type): New function, register
	GstData as a GBoxed type.

	* gst/gstdata.h (GST_TYPE_DATA): New macro

2004-02-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* gstreamer.spec.in:
          put back RELEASE
	* gst/Makefile.am:
          clean up non-disting of built files
	* testsuite/debug/commandline.c:
          test fix for option rename

2004-02-26  David Schleef  <ds@schleef.org>

	* configure.ac:  We don't really need glib-2.3.  Also remove
	some unneeded checks for library functions.
	* gst/Makefile.am:  Instead, we need to not dist files created
	by glib-genmarshal.

2004-02-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
          bump glib required version to 2.3.0 for g_value_takes_boxed

 2004-02-25  Christian Fredrik Kalager Schaller <uraeus@gnome.org>

	* common/m4/gst-docs.m4
	change flavour text from enable to disable as enable is our default
	closes bug Bug 135304

=== release 0.7.5 ===
 
 2004-02-26  Thomas Vander Stichele  <thomas at apestaart dot org>
 
	* NEWS:
          instate NEWS file
	* Makefile.am:
	* gstreamer.spec.in:
	* RELEASE:
          put back release
	* configure.ac:
	* docs/random/release:
          more updates

2004-02-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gsttag.c: (_gst_tag_initialize):
	* po/fr.po:
	* po/nl.po:
          remove hyphen from codec tags

2004-02-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/parse/Makefile.am:
          fix dependency so that a make from a clean build works the first
          time

2004-02-26  Thomas Vander Stichele  <thomas at apestaart dot org>
